update template and instructions for sbt 1.0, be a little less opinionated