@@ -3,14 +3,21 @@ name := """$name;format="norm"$"""
 organization := "$organization$"
 version := "0.1-SNAPSHOT"
 
-scalaVersion := "$scala_version$"
-
 sbtPlugin := true
 
-libraryDependencies ++= Seq(
-  "org.scalactic" %% "scalactic" % "3.0.1" % "test",
-  "org.scalatest" %% "scalatest" % "3.0.1" % "test"
-)
+// choose a test framework
+
+// utest
+//libraryDependencies += "com.lihaoyi" %% "utest" % "0.4.8" % "test"
+//testFrameworks += new TestFramework("utest.runner.Framework")
+
+// ScalaTest
+//libraryDependencies += "org.scalactic" %% "scalactic" % "3.0.1" % "test"
+//libraryDependencies += "org.scalatest" %% "scalatest" % "3.0.1" % "test"
+
+// Specs2
+//libraryDependencies ++= Seq("org.specs2" %% "specs2-core" % "3.9.1" % "test")
+//scalacOptions in Test ++= Seq("-Yrangepos")
 
 bintrayPackageLabels := Seq("sbt","plugin")
 bintrayVcsUrl := Some("""git@github.com:$organization$/$name;format="norm"$.git""")
@@ -18,6 +25,5 @@ bintrayVcsUrl := Some("""git@github.com:$organization$/$name;format="norm"$.git"
 initialCommands in console := """import $package$._"""
 
 // set up 'scripted; sbt plugin for testing sbt plugins
-ScriptedPlugin.scriptedSettings
 scriptedLaunchOpts ++=
-  Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value)
+  Seq("-Xmx1024M", "-Dplugin.version=" + version.value)
